# MamontEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CompileScoreSettings.json  LICENSE.txt  README.md  Scene.json  imgui.ini
MamontEditor/: CMakeLists.txt
MamontEditor/src/: Editor.cpp  Editor.h  main.cpp
MamontEditor/src/EditorUtils/: EditorUtils.cpp  EditorUtils.h  IconsMaterialsDesign.h
MamontEditor/src/Fonts/: MaterialDesign.h
MamontEditor/src/Panels/: EditorPanel.cpp  EditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h  StatisticsPanel.cpp  StatisticsPanel.h  ViewportPanel.cpp  ViewportPanel.h
MamontEngine/: CMakeLists.txt
MamontEngine/assets/: cone.glb  cube.glb  cylinder.glb  plane.glb  skybox.glb  sphere.glb
MamontEngine/assets/Scenes/: Scene.json  Scene.sasset
MamontEngine/assets/Scripts/: TestScript.lua
MamontEngine/assets/Shaders/: cascade_shadow.frag  cascade_shadow.frag.spv  cascade_shadow.spv  cascade_shadow.vert  cascade_shadow.vert.spv  colored_triangle_mesh.spv  colored_triangle_mesh.vert  debug_draw.vert  debug_draw.vert.spv  filtercube.vert  filtercube.vert.spv  input_structures.glsl  irradiancecube.frag  irradiancecube.frag.spv  mesh.frag  mesh.frag.spv  mesh.spv  mesh.vert  mesh.vert.spv  picking.frag  picking.frag.spv  picking.spv  picking.vert  picking.vert.spv  prefilterenvmap.frag  prefilterenvmap.frag.spv  sky.comp  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
MamontEngine/assets/Shaders/include/: input_structures.glsl  material.glsl  pbr.glsl  vertex_data.glsl
MamontEngine/src/: pch.h
MamontEngine/src/Core/: Base.h  Camera.cpp  Camera.h  ContextDevice.cpp  ContextDevice.h  Engine.cpp  Engine.h  FrameData.h  ImGuiLayer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  JobSystem.cpp  JobSystem.h  KeyCodes.h  Loader.cpp  Loader.h  Log.cpp  Log.h  RenderData.cpp  RenderData.h  Renderer.h  RendererResources.h  Test.ixx  UID.cpp  UID.h  VkDestriptor.cpp  VkDestriptor.h  VkImages.cpp  VkImages.h  VkInitializers.cpp  VkInitializers.h  VkPipelines.cpp  VkPipelines.h  Window.cpp  Window.h
MamontEngine/src/Core/Containers/: Array.h
MamontEngine/src/ECS/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
MamontEngine/src/ECS/Components/: Component.h  DirectionLightComponent.h  IDComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  TagComponent.h  TransformComponent.cpp  TransformComponent.h
MamontEngine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
MamontEngine/src/Graphics/: AABB.h  DebugRenderer.cpp  DebugRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  MScene.cpp  MScene.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderData.cpp  RenderData.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h
MamontEngine/src/Graphics/Devices/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
MamontEngine/src/Graphics/Pass/: DirectLightPass.cpp  DirectLightPass.h  MainPass.cpp  MainPass.h  RenderPass.h
MamontEngine/src/Graphics/Resources/: Asset.h  AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  MaterialAllocator.cpp  MaterialAllocator.h  Texture.cpp  Texture.h
MamontEngine/src/Graphics/Resources/Materials/: Material.cpp  Material.h  MaterialAllocator.cpp  MaterialAllocator.h  MaterialData.h
MamontEngine/src/Graphics/Resources/Models/: AABB.h  Mesh.h  Model.cpp  Model.h
MamontEngine/src/Graphics/Vulkan/: Allocator.cpp  Allocator.h  GPUBuffer.h  Image.cpp  Image.h  ImmediateContext.cpp  ImmediateContext.h  MeshBuffer.h  RendererVulkan.cpp  RendererVulkan.h  Swapchain.cpp  Swapchain.h  VkMaterial.h
MamontEngine/src/Graphics/Vulkan/Buffers/: Buffer.cpp  Buffer.h  MeshBuffer.cpp  MeshBuffer.h
MamontEngine/src/Graphics/Vulkan/Materials/: Material.h
MamontEngine/src/Graphics/Vulkan/Pipelines/: MeshPipeline.cpp  MeshPipeline.h  PipelineData.cpp  PipelineData.h  RenderPipeline.cpp  RenderPipeline.h  SkyPipeline.cpp  SkyPipeline.h
MamontEngine/src/Math/: AABB.h  Color.cpp  Color.h  Transform.h
MamontEngine/src/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
MamontEngine/src/Physics/Body/: Rigidbody.cpp  Rigidbody.h
MamontEngine/src/Physics/Collision/: BoxCollision.cpp  BoxCollision.h  CollisionShape.h
MamontEngine/src/Physics/Collision/Broadphase/: Broadphase.cpp  Broadphase.h  BruteForceBroadphase.cpp  BruteForceBroadphase.h
MamontEngine/src/Renderer/: MDevice.cpp  MDevice.h  Pipeline.h  Renderer.h  SkyPipeline.cpp  SkyPipeline.h
MamontEngine/src/Scripting/: ScriptSystem.cpp  ScriptSystem.h
MamontEngine/src/Shaders/: cascade_shadow.frag.spv  cascade_shadow.vert  cascade_shadow.vert.spv  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  picking.frag  picking.frag.spv  picking.vert  picking.vert.spv
MamontEngine/src/UI/: UI.cpp  UI.h
MamontEngine/src/Utils/: Loader.cpp  Loader.h  MetaInspector.h  MetaReflection.h  Profile.h  Reflection.h  Serialization.h  Serializer.cpp  Serializer.h  Utilities.cpp  Utilities.h  VkDestriptor.cpp  VkDestriptor.h  VkImages.cpp  VkImages.h  VkInitializers.cpp  VkInitializers.h  VkPipelines.cpp  VkPipelines.h
